<?xml version="1.0"?>
<package>
  <name>m6_runtime_visual</name>
  <version>0.0.1</version>
  <description>Pointcloud visualization</description>

  <author>Yingbing Hua</author>
  <maintainer email="diracweizi@163.com"></maintainer>

  <license>wyw</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_srvs</build_depend>
  <!--build_depend>OpenCV</build_depend-->
  <build_depend>laser_geometry</build_depend>
  <build_depend>libopencv-dev</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!--run_depend>OpenCV</run_depend-->
  <run_depend>laser_geometry</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <export>
  </export>
</package>
